ADD Vim diagram

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello
+<!DOCTYPE html>
+<html>
+<head>
+<title>Hello</title>
+</head>
+<body>
+<a href="vimModeStateDiagram.svg">vimModeStateDiagram.svg</a>
+</body>
+</html>
