--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Hello</title>
 </head>
 <body>
-<a href="vimModeStateDiagram.svg">vimModeStateDiagram.svg</a>
+	<ul>
+		<li><a href="vimModeStateDiagram.svg">Vim Modes Transition Diagram</a></li>
+	</ul>
 </body>
 </html>
