Add section Datasheety

--- a/index.html
+++ b/index.html
@@ -70,5 +70,13 @@
     </ul>
   </div>
 
+  <div class="category">
+    <h2>Datasheety</h2>
+    <ul class="links">
+      <li><a href="https://4donline.ihs.com/images/VipMasterIC/IC/SGST/SGST-S-A0002886943/SGST-S-A0002886943-1.pdf?hkey=6D3A4C79FDBF58556ACFDE234799DDF0">STM8S103F3P6</a></li>
+      <li><a href="https://www.ti.com/lit/ds/symlink/ne555.pdf?ts=1746260938577">NE555</a></li>
+    </ul>
+  </div>
+
 </body>
 </html>
