--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <div class="category">
     <h2>Učení</h2>
     <ul class="links">
+      <li><a href="https://www.w3schools.com/">W3schools</a></li>
       <li><a href="https://www.khanacademy.org">Khan Academy</a></li>
       <li><a href="https://www.codecademy.com">Codecademy</a></li>
     </ul>
