--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moje odkazy</title>
+  <title>Sbírka odkazů</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -44,7 +44,7 @@
 </head>
 <body>
 
-  <h1>Moje sbírka odkazů</h1>
+  <h1>Sbírka odkazů</h1>
 
   <div class="category">
     <h2>Práce</h2>
