Add rclone into index.html

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <li><a href="https://www.w3schools.com/">W3schools</a></li>
       <li><a href="https://www.khanacademy.org">Khan Academy</a></li>
       <li><a href="https://www.codecademy.com">Codecademy</a></li>
+      <li><a href="https://du.cesnet.cz/cs/navody/object_storage/rclone/rclone-basic-controls/start">Manuál rclone</a></li>
     </ul>
   </div>
 
