Add MT-1550 into index.php

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <ul class="links">
       <li><a href="https://4donline.ihs.com/images/VipMasterIC/IC/SGST/SGST-S-A0002886943/SGST-S-A0002886943-1.pdf?hkey=6D3A4C79FDBF58556ACFDE234799DDF0">8bitový mikrokontrolér STM8S103F3P6 s 8KB Flash</a></li>
       <li><a href="https://www.ti.com/lit/ds/symlink/ne555.pdf?ts=1746260938577">NE555</a></li>
+      <li><a href="https://www.hadex.cz/navody/g910a.pdf">Solární regulátor MT-1550</a></li>
     </ul>
   </div>
 
