Add link to odkazy.html into index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <h2>Práce</h2>
     <ul class="links">
       <li><a href="vykaz.html">Výkaz práce</a></li>
+      <li><a href="odkazy.html">Odkazy</a></li>
       <li><a href="vimModeStateDiagram.svg">Vim Mode State Diagram</a></li>
     </ul>
   </div>
